codex-rs/tui/src/snapshots/codex_tui__model_migration__tests__model_migration_constrained_opt_out.snap
---
source: tui/src/model_migration.rs
expression: rendered
---

> Codex just got an upgrade. Introducing gpt-new.


  Choose how you'd like Codex to proceed.

› 1. Try new model
  2. Use existing model

  Use ↑/↓ to move, press enter to confirm
