codex-rs/tui/src/snapshots/codex_tui__model_migration__tests__model_migration_long_markdown_constrained.snap
---
source: tui/src/model_migration.rs
expression: rendered
---

  Long migration copy Long migration copy Long migration
  copy Long migration copy Long migration copy Long

  Choose how you'd like Codex to proceed.

› 1. Try new model
  2. Use existing model

  Use ↑/↓ to move, press enter to confirm
