codex-rs/tui/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---

> Codex just got an upgrade. Introducing gpt-5.1-codex-max.

  We recommend switching from gpt-5-codex to
  gpt-5.1-codex-max.

  Codex-optimized flagship for deep and fast reasoning.
  Learn more about gpt-5.1-codex-max at
  https://www.codex.com/models/gpt-5.1-codex-max

  enter continue
