codex-rs/tui/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex_mini.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---

> Codex just got an upgrade. Introducing gpt-5.1-codex-mini.

  We recommend switching from gpt-5-codex-mini to
  gpt-5.1-codex-mini.

  Optimized for codex. Cheaper, faster, but less capable.
  Learn more about gpt-5.1-codex-mini at
  https://www.codex.com/models/gpt-5.1-codex-mini

  enter continue
